[package]
name = "ruuvi-gateway-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
prometheus = { version = "0.13" }
lazy_static = "1.4.0"
rumqttc = { version = "0.12" }
